--- a/web/package.json
+++ b/web/package.json
@@ -1,32 +1,39 @@
 {
-  "name": "web",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
-    "db:generate": "drizzle-kit generate:pg",
-    "db:push": "drizzle-kit push:pg",
-    "db:migrate": "drizzle-kit migrate"
-  },
-  "dependencies": {
-    "@vercel/postgres": "^0.10.0",
-    "dotenv": "^17.2.3",
-    "drizzle-orm": "^0.44.7",
-    "next": "16.0.1",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
-    "zod": "^4.1.12"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "drizzle-kit": "^0.31.6",
-    "eslint": "^9",
-    "eslint-config-next": "16.0.1",
-    "typescript": "^5"
-  }
+	"name": "web",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"test": "vitest",
+		"lint": "eslint",
+		"db:generate": "drizzle-kit generate",
+		"db:push": "drizzle-kit push",
+		"db:migrate": "drizzle-kit migrate"
+	},
+	"dependencies": {
+		"@vercel/postgres": "^0.10.0",
+		"dotenv": "^17.2.3",
+		"drizzle-orm": "^0.44.7",
+		"next": "16.0.1",
+		"openai": "^6.8.1",
+		"p-retry": "^7.1.0",
+		"pg": "^8.16.3",
+		"react": "19.2.0",
+		"react-dom": "19.2.0",
+		"zod": "^4.1.12",
+		"ioredis": "^5.3.2"
+	},
+	"devDependencies": {
+		"@types/node": "^20.19.24",
+		"@types/react": "^19",
+		"@types/react-dom": "^19",
+		"drizzle-kit": "^0.31.6",
+		"eslint": "^9",
+		"eslint-config-next": "16.0.1",
+		"ts-node": "^10.9.2",
+		"typescript": "^5",
+		"vitest": "^4.0.8"
+	}
 }
