--- a/web/package.json
+++ b/web/package.json
@@ -16,14 +16,16 @@
 		"@vercel/postgres": "^0.10.0",
 		"dotenv": "^17.2.3",
 		"drizzle-orm": "^0.44.7",
+		"g": "^2.0.1",
+		"ioredis": "^5.3.2",
 		"next": "16.0.1",
 		"openai": "^6.8.1",
 		"p-retry": "^7.1.0",
 		"pg": "^8.16.3",
 		"react": "19.2.0",
 		"react-dom": "19.2.0",
-		"zod": "^4.1.12",
-		"ioredis": "^5.3.2"
+		"redis-cli": "^2.1.2",
+		"zod": "^4.1.12"
 	},
 	"devDependencies": {
 		"@types/node": "^20.19.24",
